// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Contextual Matches the snapshot when disabled 1`] = `
.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c5 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  bottom: 0.5rem;
  color: #57666E;
  display: inline-block;
  height: 1rem;
  left: 0.5rem;
  margin: auto;
  position: absolute;
  top: 0.5rem;
  width: 1rem;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  z-index: 1;
}

.c4 {
  color: #9CA7B4;
  height: 1rem;
  width: 1rem;
}

.c10 {
  color: #57666E;
  height: 1.25rem;
  margin: -1px;
  width: 1.25rem;
}

.c7 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  border-radius: undefined;
  padding: var(--spacing-half) 1.75rem var(--spacing-half) var(--spacing-4x);
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7::-webkit-input-placeholder {
  color: #57666E;
}

.c7::-moz-placeholder {
  color: #57666E;
}

.c7:-ms-input-placeholder {
  color: #57666E;
}

.c7::placeholder {
  color: #57666E;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c7:disabled,
.c7:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::placeholder {
  color: #9CA7B4;
}

label + .c6 {
  margin-top: 0;
}

.c7::-webkit-search-decoration,
.c7::-webkit-search-cancel-button,
.c7::-webkit-search-results-button,
.c7::-webkit-search-results-decoration {
  display: none;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 1px solid transparent;
  bottom: 0.5rem;
  cursor: pointer;
  display: none;
  height: 1.25rem;
  margin: auto;
  padding: 0;
  position: absolute;
  right: 0.25rem;
  top: 0.5rem;
  width: 1.25rem;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

input:valid + .c8 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
    >
      <svg
        className="c4"
        disabled={true}
      />
      <span
        aria-hidden="false"
        className="c5"
      >
        Search
      </span>
    </label>
    <input
      autoComplete="on"
      className="c6 c7"
      disabled={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="search"
      value=""
    />
    <button
      className="c8 c9"
      data-testid="resetButton"
      onClick={[Function]}
    >
      <svg
        className="c10"
      />
      <span
        aria-hidden="false"
        className="c5"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`Search Contextual Matches the snapshot when enabled 1`] = `
.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c5 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  bottom: 0.5rem;
  color: #57666E;
  display: inline-block;
  height: 1rem;
  left: 0.5rem;
  margin: auto;
  position: absolute;
  top: 0.5rem;
  width: 1rem;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  position: relative;
  z-index: 1;
}

.c4 {
  color: #57666E;
  height: 1rem;
  width: 1rem;
}

.c10 {
  color: #57666E;
  height: 1.25rem;
  margin: -1px;
  width: 1.25rem;
}

.c7 {
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  border-radius: undefined;
  padding: var(--spacing-half) 1.75rem var(--spacing-half) var(--spacing-4x);
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7::-webkit-input-placeholder {
  color: #57666E;
}

.c7::-moz-placeholder {
  color: #57666E;
}

.c7:-ms-input-placeholder {
  color: #57666E;
}

.c7::placeholder {
  color: #57666E;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c7:disabled,
.c7:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c7:disabled,
.c7:disabled::placeholder {
  color: #9CA7B4;
}

label + .c6 {
  margin-top: 0;
}

.c7::-webkit-search-decoration,
.c7::-webkit-search-cancel-button,
.c7::-webkit-search-results-button,
.c7::-webkit-search-results-decoration {
  display: none;
}

.c9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: 1px solid transparent;
  bottom: 0.5rem;
  cursor: pointer;
  display: none;
  height: 1.25rem;
  margin: auto;
  padding: 0;
  position: absolute;
  right: 0.25rem;
  top: 0.5rem;
  width: 1.25rem;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

input:valid + .c8 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
    >
      <svg
        className="c4"
      />
      <span
        aria-hidden="false"
        className="c5"
      >
        Search
      </span>
    </label>
    <input
      autoComplete="on"
      className="c6 c7"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="search"
      value=""
    />
    <button
      className="c8 c9"
      data-testid="resetButton"
      onClick={[Function]}
    >
      <svg
        className="c10"
      />
      <span
        aria-hidden="false"
        className="c5"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;
